deployment5.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
  labels:
    harness.io/color: green  # or green during next deploy

spec:
  replicas: 3
  selector:
    matchLabels:
      app: marvel
      version: green
  template:
    metadata:
      labels:
        app: marvel
        version: green
    spec:
      containers:
        - name: marvel
          image: 688567283917.dkr.ecr.us-east-1.amazonaws.com/marvel:v2
          ports:
            - containerPort: 8081
