Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocean-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocean
      version: v1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: ocean
        version: v1
    spec:
      containers:
        - name: ocean-container
          image: asamaswini/ocean:v1
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: ocean-service
spec:
  selector:
    app: ocean
    version: v1 # Remove version-specific selector
  ports:
    - port: 80
      targetPort: 8081
      nodePort: 30090
  type: NodePort
