blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marvel-service-blue
  annotations:
    harness.io/blue-service: "true"
spec:
  selector:
    app: marvel
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: LoadBalancer
