deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocean-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ocean
      version: v2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: ocean
        version: v2
    spec:
      containers:
        - name: ocean-container
          image: asamaswini/ocean:v2
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: ocean-nodeport
spec:
  selector:
    app: ocean
    version: v2
  ports:
    - port: 80
      targetPort: 8081
      nodePort: 30080
  type: NodePort
