deployment4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
  labels:
    harness.io/color: blue  # or green during next deploy

spec:
  replicas: 3
  selector:
    matchLabels:
      app: marvel
      version: blue
  template:
    metadata:
      labels:
        app: marvel
        version: blue
    spec:
      containers:
        - name: marvel
          image: 688567283917.dkr.ecr.us-east-1.amazonaws.com/marvel:v1
          ports:
            - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
  labels:
    harness.io/color: green  # or green during next deploy

spec:
  replicas: 3
  selector:
    matchLabels:
      app: marvel
      version: green
  template:
    metadata:
      labels:
        app: marvel
        version: green
    spec:
      containers:
        - name: marvel
          image: 688567283917.dkr.ecr.us-east-1.amazonaws.com/marvel:v2
          ports:
            - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: marvel-service
spec:
  selector:
    app: marvel
    version: blue  # Initially pointing to Blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: LoadBalancer
