canary-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marvel-canary-path-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: marvel.assy.com
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: deploy1-service
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: deploy2-service
                port:
                  number: 80
  tls:
    - hosts:
        - marvel.assy.com
      secretName: marvel-ssl-secret  # SSL certificate secret
