canaryweighted.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marvel-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"  # 20% traffic to v2
spec:
  rules:
    - host: marvel.example.com
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: deploy1-service
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: deploy2-service
                port:
                  number: 80
