ingress-pathbased.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marvel-canary-path-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: marvel.assy.com
      http:
        paths:
          # Path that routes all traffic starting with `/`
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deploy1-service
                port:
                  number: 80
          
          # Path that routes all traffic starting with `/v1`
          - path: /v1
            pathType: Prefix   # Matches all subpaths under /v1
            backend:
              service:
                name: deploy1-service
                port:
                  number: 80
          
          # Path that routes all traffic starting with `/v2`
          - path: /v2
            pathType: Prefix   # Matches all subpaths under /v2
            backend:
              service:
                name: deploy2-service
                port:
                  number: 80
